--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <footer>
     <p>&copy; 2025 Tejrakshanet. All rights reserved.</p>
-    <p>Contact: info@tejrakshanet.com | +91 8779989576</p>
+    <p>Contact: info@tejrakshanet.com |</p>
   </footer>
 
   <a href="https://wa.me/918779989576" class="whatsapp-float" target="_blank">
